--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ before_install:
  - sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
 script:
  - dotnet restore
+ - dotnet build
